--- a/app/src/main/res/layout/viewer_info_fragment.xml
+++ b/app/src/main/res/layout/viewer_info_fragment.xml
@@ -9,6 +9,14 @@
         <variable
             name="viewModel"
             type="com.example.graphqlsample.ui.viewer.info.ViewerInfoViewModel" />
+
+        <variable
+            name="uiModel"
+            type="com.example.graphqlsample.ui.viewer.info.ViewerInfoViewModel.ViewerInfoUiModel.Loaded" />
+
+        <variable
+            name="isLoading"
+            type="boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +41,7 @@
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:text="@{viewModel.login}"
+                    android:text="@{uiModel.login}"
                     android:textAppearance="?android:textAppearanceLarge"
                     app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
                     app:layout_constraintEnd_toStartOf="@+id/nameEmailBarrier"
@@ -48,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:text="@{viewModel.name}"
+                    android:text="@{uiModel.name}"
                     android:textAppearance="?android:textAppearanceMedium"
                     app:layout_constraintBottom_toTopOf="@+id/txtEmail"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +71,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
-                    android:text="@{viewModel.email}"
+                    android:text="@{uiModel.email}"
                     android:textAppearance="?android:textAppearanceMedium"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +115,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:visible="@{safeUnbox(viewModel.loading)}" />
+            app:visible="@{isLoading}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
